refactor payment outbox repository implementation
- Renamed variables in PaymentOutboxRepositoryImpl for clarity.
- Added @Component annotation for better Spring context integration.
- Integrated PaymentOutboxNotFoundException for missing entities.
- Replaced List.of usage with Arrays.asList for compatibility.

incremental #31